--- a/1Lab/app/src/main/AndroidManifest.xml
+++ b/1Lab/app/src/main/AndroidManifest.xml
@@ -5,19 +5,26 @@
     package="com.example.a1lab">
 
     <dist:module dist:instant="true" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS" />`
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".AppEx"
         android:allowBackup="true"
-        tools:ignore="GoogleAppIndexingWarning"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".AppEx"
-        android:theme="@style/AppTheme">
-        <activity android:name=".DataActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".TabbedActivity"
+            android:label="@string/title_activity_tabbed" />
+
         <activity
             android:name=".SignUpActivity"
             android:noHistory="true" />
