--- a/1Lab/app/src/main/AndroidManifest.xml
+++ b/1Lab/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS" />`
+    <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -21,10 +21,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".AddTerritoryActivity"
+            android:label="@string/title_activity_add_territory"></activity>
         <activity
             android:name=".TabbedActivity"
             android:label="@string/title_activity_tabbed" />
-
         <activity
             android:name=".SignUpActivity"
             android:noHistory="true" />
